...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@color/colorBlue"
            android:text="CREATE NEW ACCOUNT"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button_import_account"
            app:layout_constraintEnd_toEndOf="@+id/button_import_account"
            app:layout_constraintStart_toStartOf="@+id/button_import_account" />

        <Button
            android:id="@+id/button_import_account"
            android:layout_width="0dp"
...
