<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.w3engineers.unicef.telemesh.R" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mesh_contact_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/spinner_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_14"
            android:layout_marginEnd="@dimen/margin_14"
            android:background="@color/colorGradientPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spinner_view"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contact_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_holder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/group_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_holder" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_60"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_holder">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/empty_image_view"
                android:layout_width="@dimen/width_200"
                android:layout_height="@dimen/height_200"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginRight="@dimen/margin_20"
                android:contentDescription="@string/no_contact_available"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center"
                android:text="@string/no_favorite"
                android:textColor="@color/not_found_color"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_image_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:backgroundTint="@color/colorPrimary"
            android:src="@mipmap/fab_chat"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>