<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolbar_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding_4"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view_cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                android:contentDescription="@string/clear_search_text"
                android:padding="@dimen/padding_4"
                android:src="@mipmap/ic_cross_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/search"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/padding_8"
                android:paddingEnd="@dimen/padding_8"
                android:textAllCaps="false"
                android:textColor="@color/message_text_color"
                android:textColorHint="@color/chat_sub_item_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_view_cross"
                app:layout_constraintStart_toEndOf="@+id/image_view_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:contentDescription="@string/close_search"
                android:padding="@dimen/padding_4"
                android:src="@mipmap/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>