...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="@{() -> contactViewModel.openMessage(user)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_unread_message_count"
...
            android:maxLines="@integer/max_line_1"
            android:text="@{user.hasUnreadMessage+``}"
            android:textColor="@android:color/white"
            android:textSize="9sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_view_favourite"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="99"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/image_view_favourite"
...
